static/css/custom.css
/* General */
/* IE specific fix */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .card--ie-773px {
     width: 773px;
  }
}

/* Flex : shadows the classes in tabler.io, but adds the display:flex for them to work. */
.flex-row {
    display: flex;
    flex-direction: row;
}

/* Fixes to tabler*/
.btn-primary.disabled, .btn-primary:disabled, .btn.disabled, .btn:disabled {
    cursor: not-allowed;
}

.fg-success {
    color: #5EBB00;
}

/* Top bar */
.nav-tabs .nav-link-thick-line {
    border-bottom-width: 4px;
}

/* QuestionnaireCreate.vue */
.big-icon {
    font-size: 4rem;
}

/* QuestionnaireBodyCreate.vue */
.form-control-h3 {
    font-size: 1.125rem;
    font-weight: 400;
}

.form-label-h3 {
    margin-bottom: 0px;
}

/* QuestionnairePreview.vue */
.preview {
    background: rgba(70, 127, 207, 0.04) url(../img/apercu.png);
    padding: 1.5rem;
}

/* various */
.with-line-breaks {
    white-space: pre-wrap;
}

/* control_detail.html */
.draft {
    background: rgba(70, 127, 207, 0.04)
}

/* datepicker : make it blue */
.blue .vdp-datepicker__calendar .cell.selected,
.blue .vdp-datepicker__calendar .cell.selected.highlighted,
.blue .vdp-datepicker__calendar .cell.selected:hover {
    background: #467fcf;
    color: #fff;
}

.blue .vdp-datepicker__calendar .cell:not(.blank):not(.disabled).day:hover,
.blue .vdp-datepicker__calendar .cell:not(.blank):not(.disabled).month:hover,
.blue .vdp-datepicker__calendar .cell:not(.blank):not(.disabled).year:hover {
    border: 1px solid #467fcf;
}

/* Wizard pour questionnaire create */
.wizard-step {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.wizard-step-graphics {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.wizard-step-thread {
    background-color: #dbdde0;
    height: 0.3em;
    width: 100%;
    position: relative;
    top: 1.2em;
    z-index: -1
}

.wizard-step-bubble {
    background-color: #dbdde0;
    color: #495057;
    border-radius: 50%;
    height: 2rem;
    width: 2rem;
    padding-top: 0.3rem;
    text-align: center;
    margin-bottom: 0.2rem;
}

.wizard-step-bubble .done-icon {
    display: none;
    margin-top: 0.2rem
}

/* Highlight clickable step on hover */
.wizard-step a:hover {
    text-decoration-line: none;
}

.wizard-step a:hover .wizard-step-bubble, .wizard-step a:hover .wizard-step-thread {
    background-color: #45aaf2;
    color: white;
}

/* Active step */
.active .wizard-step-thread {
    background-color: #45aaf2;
    color: #fff;
}

.active .wizard-step-bubble {
    background-color: #45aaf2;
    color: #fff;
}

/* Done step */
.done .wizard-step-thread {
    background-color: #5eba00;
    color: #fff;
}

.done .wizard-step-bubble {
    background-color: #5eba00;
    color: #fff;
}

.done .wizard-step-bubble .number {
    display: none;
}

.done .wizard-step-bubble .done-icon {
    display: block;
}


/* ResponseFileList.vue */
table.response-file-list {
    table-layout: fixed;
    width: 100%;
}

.response-file-list td, .response-file-list th {
    white-space: normal;
    word-wrap: break-word;
    text-align: center
}

/* trash.html */
table.trash-list {
    table-layout: fixed;
    width: 100%;
}

.trash-list td, .trash-list th {
    white-space: normal;
    word-wrap: break-word;
    text-align: center;
}

/* Elements in QuestionBox collapsed part */
.question-box-child {
    /* Same as card-body, but with no padding-top */
    flex: 1 1 auto;
    margin: 0;
    padding-right: 1.5rem;
    padding-bottom: 0.5rem;
    padding-left: 1.5rem;
    position: relative;
}

/* Welcome/CGU */
.scrollbox {
    overflow-y: scroll;
    border: 1px solid black;
    height: 25em;
    padding: 1.5rem;
}

/* Login page */
.max-width-250 {
    max-width: 250px;
}

.round {
    border-radius: 50%;
}

.text-large-paragraph {
    font-size: 1.25em;
}

.white {
    background-color: white;
}

.resize-bug {
    flex: 0 0 auto;  /* IE */
    object-fit: scale-down; /* FF */
}

/* Tags for Brouillon */
.tag {
    transform: translate(0rem,-1px);
}

.big-tag {
    font-size: 1rem;
}

.round-tag {
    border-radius: 10rem;
    padding-left: 1em;
    padding-right: 1em;
}

